# cosmic-files

./: .gitignore  Cargo.toml  README.md  TESTING.md  build.rs  justfile
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  main.yml  prettier.yml
cosmic-files-applet/: Cargo.toml
cosmic-files-applet/src/: file_manager.rs  main.rs
debian/: changelog  control  copyright  rules
examples/: copy.rs  desktop.rs  dialog.rs  gio-list.rs  gvfs.rs  mount.rs
i18n/af/: cosmic_files.ftl
i18n/ar/: cosmic_files.ftl
i18n/be/: cosmic_files.ftl
i18n/bg/: cosmic_files.ftl
i18n/ca/: cosmic_files.ftl
i18n/cs/: cosmic_files.ftl
i18n/da/: cosmic_files.ftl
i18n/de/: cosmic_files.ftl
i18n/el/: cosmic_files.ftl
i18n/en/: cosmic_files.ftl
i18n/es/: cosmic_files.ftl
i18n/es-419/: cosmic_files.ftl
i18n/et/: cosmic_files.ftl
i18n/fa/: cosmic_files.ftl
i18n/fi/: cosmic_files.ftl
i18n/fr/: cosmic_files.ftl
i18n/fy/: cosmic_files.ftl
i18n/ga/: cosmic_files.ftl
i18n/he/: cosmic_files.ftl
i18n/hi/: cosmic_files.ftl
i18n/hu/: cosmic_files.ftl
i18n/id/: cosmic_files.ftl
i18n/is/: cosmic_files.ftl
i18n/it/: cosmic_files.ftl
i18n/ja/: cosmic_files.ftl
i18n/kab/: cosmic_files.ftl
i18n/kk/: cosmic_files.ftl
i18n/kmr/: cosmic_files.ftl
i18n/kn/: cosmic_fiiles.ftl  cosmic_files.ftl
i18n/ko/: cosmic_files.ftl
i18n/lt/: cosmic_files.ftl
i18n/nb-NO/: cosmic_files.ftl
i18n/nl/: cosmic_files.ftl
i18n/nn/: cosmic_files.ftl
i18n/pa/: cosmic_files.ftl
i18n/pl/: cosmic_files.ftl
i18n/pt/: cosmic_files.ftl
i18n/pt-BR/: cosmic_files.ftl
i18n/pt_BR/: cosmic_files.ftl
i18n/ro/: cosmic_files.ftl
i18n/ru/: cosmic_files.ftl
i18n/sk/: cosmic_files.ftl
i18n/sr/: cosmic_files.ftl
i18n/sr-Cyrl/: cosmic_files.ftl
i18n/sr-Latn/: cosmic_files.ftl
i18n/sv/: cosmic_files.ftl  sv.ftl
i18n/th/: cosmic_files.ftl
i18n/tr/: cosmic_files.ftl
i18n/uk/: cosmic_files.ftl
i18n/zh-CN/: cosmic_files.ftl
i18n/zh-TW/: cosmic_files.ftl
i18n/zh-cn/: cosmic_files.ftl
res/: com.system76.CosmicFiles.desktop  com.system76.CosmicFiles.metainfo.xml
samples/: check.sh
samples/application/: octet-stream
samples/mime/application/: javascript.js  x-shellscript.sh
samples/mime/text/: html.html  markdown.md  rust.rs  x-csrc.c
samples/mode/: .gitignore  create.sh
samples/text/: css.css  csv.csv  x-chdr.h
scripts/: copy.sh
src/: app.rs  archive.rs  channel.rs  clipboard.rs  config.rs  context_action.rs  desktop.rs  desktop_entry.rs  dialog.rs  dnd_destination.rs  dnd_source.rs  exe_icon.rs  init.rs  key_bind.rs  large_image.rs  lib.rs  load_image.rs  localize.rs  main.rs  menu.rs  mime_app.rs  mime_icon.rs  mouse_area.rs  nav_tree.rs  operation.rs  pdf_preview.rs  remote.rs  scroll_area.rs  spawn_detached.rs  tab.rs  thumbnail_cacher.rs  thumbnailer.rs  trash.rs  trash_helpers.rs  util.rs  xdg_portals.rs  zoom.rs
src/app/: icons.rs
src/mounter/: gvfs.rs  mod.rs
src/operation/: controller.rs  mod.rs  notifiers.rs  reader.rs  recursive.rs  reflink.rs
src/xdg/: mime_app.rs  mod.rs
